# llm-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.md  build.rs  package.json  test.js
src/: forward.rs  lib.rs  loader.rs  main.rs  model.rs  tensor.rs  tokenizer.rs
