[package]
name = "llm-rs"
version = "0.1.0"
edition = "2024"

[features]
napi-binding = ["napi", "napi-derive"]
cli = []

[dependencies]
serde_json = "1.0.150"
rand = "0.8"
napi = { version = "2", features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }

[lib]
name = "llm_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "llm-rs"
path = "src/main.rs"
required-features = ["cli"]

[build-dependencies]
napi-build = "2"